# smolassistant

./: .gitignore  README.md  pyproject.toml
src/: run_assistant.py
src/smolassistant/: __main__.py  __main__.py.tmp  __main__.py:replace_lines:435:445  config.py
src/smolassistant/interfaces/: __init__.py  telegram.py
src/smolassistant/tools/: __init__.py  message_history.py
src/smolassistant/tools/gmail/: __init__.py  auth.py  gmail_tool.py  google
src/smolassistant/tools/google/: __init__.py  auth.py  gcal_tool.py  gmail_tool.py
src/smolassistant/tools/llm_text_processor/: __init__.py  llm_text_processor.py  summarizing_visit_webpage.py
src/smolassistant/tools/reminder/: __init__.py  reminder_tool.py  service.py
src/smolassistant/tools/telegram/: __init__.py  html_sanitizer.py  telegram.py
