[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smolassistant"
version = "0.1.0"
description = "Agentic AI assistant based on smolagents"
authors = [
    {name = "Juehang Qin"}
]
dependencies = [
    "smolagents>=1.12.0",
    "xdg-base-dirs>=6.0.1",
    "litellm>=1.64.0",
    "tomli-w>=1.0.0",
    "tomli>=2.0.1",
    "docstring_parser>=0.15",
    "schedule>=1.2.0",
    "nicegui>=2.0.0",
    "google-api-python-client>=2.100.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=1.0.0",
    "python-telegram-bot>=20.0.0",
]

requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
]

[project.scripts]
smolassistant = "run_assistant:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
